# aichat_nvim

./: Cargo.toml  Instead of running  build.sh  docs.txt
src/: .agent.md  config.rs  error.rs  job_runner.rs  lib.rs  ui.rs  utils.rs
