[package]
name = "aichat_nvim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# nvim-oxi = { version = "0.5.1", features = ["__vendored_luajit", "neovim-0-10"] }
nvim-oxi = { git = "https://github.com/noib3/nvim-oxi.git", version = "0.5.1", features = ["__vendored_luajit", "neovim-0-10"], branch = "main" }

once_cell = "1.18.0"
serde = { version = "1.0.218", features = ["derive"] }
