[package]
name = "aichat_nvim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# nvim-oxi = { git = "https://github.com/noib3/nvim-oxi.git", version = "0.6.*", features = ["__vendored_luajit", "neovim-0-11"], branch = "main" }
nvim-oxi = { path = "/home/ricardo/projects/nvim-oxi/", version = "0.6.0", features = ["neovim-0-11"] }

once_cell = "1.18.0"
serde = { version = "1.0.218", features = ["derive"] }
